# sokol-repros

./: .gitignore  CMakeLists.txt  README.md  index.html
deploy/: chrome127-offscreen.html  chrome127-offscreen.js  chrome127-offscreen.wasm
js/: chrome127-offscreen-js.html  wgpu-dyn-offsets.html  wgpu-dyn-offsets.js
src/chrome127-offscreen/: main.c
